# mutii

./: README.md  pyproject.toml
config/: settings.json
src/: app.py  numpad.py  settings.py
utils/: config_utils.py  mouse_utils.py
